--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="container position-relative text-center text-lg-start" data-aos="zoom-in" data-aos-delay="100">
       <div class="row">
         <div class="col-lg-8">
-          <h1><span>Taverna Arnui</span></h1>
+          <h1><span>Taverna Arnui - github backup</span></h1>
           <h2>Benvinguts a Llavorsí!</h2>
 
           <div class="btns">
