bunyols and canelons

--- a/fr.html
+++ b/fr.html
@@ -259,6 +259,15 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-dishes">
+            <img src="assets/img/menu/canelons.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#menu">Cannelloni</a><span></span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-dishes">
             <img src="assets/img/menu/provolone.png" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#menu">Provolone au four</a><span></span>
@@ -311,8 +320,6 @@
             <div class="menu-ingredients">
             </div>
           </div>
-
-
 
           <div class="col-lg-6 menu-item filter-pizza">
             <img src="assets/img/menu/pizza-pernil.png" class="menu-img" alt="">
@@ -408,6 +415,15 @@
             <img src="assets/img/menu/coulant-negra.png" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#menu">Coulant au chocolat noir</a><span></span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-desserts">
+            <img src="assets/img/menu/bunyols.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#menu">Bunyols</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
