--- a/index.html
+++ b/index.html
@@ -258,6 +258,15 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-dishes">
+            <img src="assets/img/menu/canelons.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#menu">Canelons</a><span></span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-dishes">
             <img src="assets/img/menu/provolone.png" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#menu">Provolone al Forn</a><span></span>
@@ -405,6 +414,15 @@
             <img src="assets/img/menu/coulant-negra.png" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#menu">Coulant de Xocolata Negra</a><span></span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-desserts">
+            <img src="assets/img/menu/bunyols.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#menu">Bunyols de Vent</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
