--- a/en.html
+++ b/en.html
@@ -275,6 +275,16 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-dishes">
+            <img src="assets/img/menu/canelons.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#menu">Cannelloni</a><span></span>
+            </div>
+            <div class="menu-ingredients">
+		          Lasagna rolls baked with a minced beef filling and covered in béchamel sauce
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-dishes">
             <img src="assets/img/menu/provolone.png" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#menu">Baked Provolone</a><span></span>
@@ -441,6 +451,16 @@
             </div>
             <div class="menu-ingredients">
               Chocolate cake with a molten dark chocolate core
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-desserts">
+            <img src="assets/img/menu/bunyols.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#menu">Bunyols</a><span></span>
+            </div>
+            <div class="menu-ingredients">
+		          Tasty, deep-fried dough balls traditionally flavoured with aniseed and sprinkled with sugar
             </div>
           </div>
 
