--- a/es.html
+++ b/es.html
@@ -259,6 +259,15 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-dishes">
+            <img src="assets/img/menu/canelons.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#menu">Canelones</a><span></span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
+          
+          <div class="col-lg-6 menu-item filter-dishes">
             <img src="assets/img/menu/provolone.png" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#menu">Provolone al horno</a><span></span>
@@ -406,6 +415,15 @@
             <img src="assets/img/menu/coulant-negra.png" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#menu">Coulant de chocolate negro</a><span></span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-desserts">
+            <img src="assets/img/menu/bunyols.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#menu">Buñuelos de Viento</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
