Update es.html nadal

--- a/es.html
+++ b/es.html
@@ -84,7 +84,22 @@
             <a href="#contact" class="btn-book animated fadeInUp scrollto">Reserva una Mesa</a>
           </div>
         </div>
-
+        
+        <!-- Christmas Modal -->
+        <p></p>
+        <button id="myBtn">'Click' por el menu de Navidad</button>
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Esta navidad tenemos un menú para llevar</p>
+        <p>Trúcanos por detalles: +34 653 64 69 33</p>
+        <p>¡Feliz Navidad!</p>
+        </div>
+        </div>
+        <!-- Christmas Modal Ends-->
+        
       </div>
     </div>
   </section><!-- End Hero -->
