--- a/fr.html
+++ b/fr.html
@@ -85,6 +85,21 @@
           </div>
         </div>
 
+        <!-- Christmas Modal -->
+        <p></p>
+        <button id="myBtn">Cliquez pour le menu de Noël</button>
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Ce Noël, nous avons un menu à emporter</p>
+        <p>Appelez-nous pour plus de détails : +34 653 64 69 33</p>
+        <p>Joyeux Noël!</p>
+        </div>
+        </div>
+       <!-- Christmas Modal Ends-->
+        
       </div>
     </div>
   </section><!-- End Hero -->
