--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         <!-- Christmas Modal -->
         <p></p>
-        <button id="myBtn">Fes 'click' per menú de nadal</button>
+        <button id="myBtn">Fes click per menú de nadal</button>
         <!-- The Modal -->
         <div id="myModal" class="modal">
         <!-- Modal content -->
