--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
   <footer id="footer">
        <div class="container">
       <div class="copyright">
-      <strong><span>Amb ♥ de Taverna Arnui</span></strong>
+      <strong><span>Amb <span style="color: red">♥</span> de Taverna Arnui</span></strong>       
       <!-- Website built by Jim Kennedy on the Bootstrap Restaurantly template -->
       </div>
     </div>
