change heart colour to red

--- a/en.html
+++ b/en.html
@@ -722,7 +722,7 @@
   <footer id="footer">
        <div class="container">
       <div class="copyright">
-      <strong><span>With ♥ from Taverna Arnui</span></strong>
+      <strong><span>With <span style="color: red">♥</span> from Taverna Arnui</span></strong>
       <!-- Website built by Jim Kennedy on the Bootstrap Restaurantly template -->
       </div>
     </div>
