--- a/fr.html
+++ b/fr.html
@@ -686,7 +686,7 @@
   <footer id="footer">
        <div class="container">
       <div class="copyright">
-      <strong><span>Avec ♥ de Taverna Arnui</span></strong>
+      <strong><span>Avec <span style="color: red">♥</span> de Taverna Arnui</span></strong>
       <!-- Website built by Jim Kennedy on the Bootstrap Restaurantly template -->
       </div>
     </div>
