--- a/es.html
+++ b/es.html
@@ -687,7 +687,7 @@
   <footer id="footer">
        <div class="container">
       <div class="copyright">
-      <strong><span>Con ♥ de Taverna Arnui</span></strong>
+      <strong><span>Con <span style="color: red">♥</span> de Taverna Arnui</span></strong>
       <!-- Website built by Jim Kennedy on the Bootstrap Restaurantly template -->
       </div>
     </div>
