--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
         <div class="modal-content">
         <span class="close">&times;</span>
         <p>Aquest nadal tenim un menú per emportar</p>
-        <p>Truca'ns per detalls: +34 653 64 69 33</p>
+        <p>Truca'ns per detalls</p>
+        <p>+34 653 64 69 33</p>
+
         <p>Bones festes!</p>
       </div>
     </div>
