--- a/en.html
+++ b/en.html
@@ -83,7 +83,23 @@
             <a href="#menu" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
             <a href="#contact" class="btn-book animated fadeInUp scrollto">Reserve a Table</a>
           </div>
-        </div>   
+        </div>
+
+	<!-- Christmas Modal -->
+        <p></p>
+        <button id="myBtn">'Click' for the Christmas take-away menu</button>
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>This Christmas we have a take-away menu</p>
+        <p>Call us for details: +34 653 64 69 33</p>
+        <p>Happy Christmas!</p>
+      	</div>
+    	</div>
+      <!-- Christmas Modal Ends-->
+	      
       </div>    
     </div>
   </section><!-- End Hero -->
