--- a/fr.html
+++ b/fr.html
@@ -86,8 +86,8 @@
         </div>
 
         <!-- Christmas Modal -->
-       
-      
+        <p></p>
+        <button id="myBtn">foo</button>
         <!-- The Modal -->
         <div id="myModal" class="modal">
         <!-- Modal content -->
