--- a/es.html
+++ b/es.html
@@ -106,7 +106,7 @@
               <li data-filter="*" class="filter-active">Todos</li>
               <li data-filter=".filter-tapas">Tapas</li>
               <li data-filter=".filter-dishes">Platos</li>
-              <li data-filter=".filter-pizza">Pizzas</li>
+              <li data-filter=".filter-coca">Cocas</li>
               <li data-filter=".filter-desserts">Postres</li>
             </ul>
           </div>
@@ -321,73 +321,73 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-pernil.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-pernil.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza jamón</a><span></span>
+              <a href="#menu">Coca jamón</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
           
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-formatges.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-formatges.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza quesos</a><span></span>
+              <a href="#menu">Coca quesos</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-provolone.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-provolone.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza provolone</a><span></span>
+              <a href="#menu">Coca provolone</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
           
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-xorico.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-xorico.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza chorizo</a><span></span>
+              <a href="#menu">Coca chorizo</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-pop.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-pop.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza pulpo gallega</a><span></span>
+              <a href="#menu">Coca pulpo gallega</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-sobrassada.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-sobrassada.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza sobrasada</a><span></span>
+              <a href="#menu">Coca sobrasada</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-tonyina.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-tonyina.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza atún</a><span></span>
+              <a href="#menu">Coca atún</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-vegetal.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-vegetal.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza vegetal</a><span></span>
+              <a href="#menu">Coca vegetal</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
@@ -519,7 +519,7 @@
             Fundada en 2012, la Taverna Arnui se encuentra en el pueblo de Llavorsí, justo debajo de las Bordes d'Arnui que dan nombre al restaurante.
           </p>
           <p>
-            Nuestra cocina clásica presenta menús inspirados en la temporada con ingredientes de la más alta calidad. Hay algo para todos, desde platos pequeños para compartir hasta pizza y una experiencia gastronómica tradicional. Nuestro deseo de tratar a los huéspedes como familia sigue siendo el mismo, pero nuestros sabores de temporada cambian constantemente.
+            Nuestra cocina clásica presenta menús inspirados en la temporada con ingredientes de la más alta calidad. Hay algo para todos, desde platos pequeños para compartir hasta coca y una experiencia gastronómica tradicional. Nuestro deseo de tratar a los huéspedes como familia sigue siendo el mismo, pero nuestros sabores de temporada cambian constantemente.
           </p>
           <p>
             Ven a disfrutar de un relajante almuerzo o cena de deliciosa comida con amigos o familiares; en la Taverna Arnui siempre te sentirás como en casa.
