--- a/fr.html
+++ b/fr.html
@@ -119,7 +119,7 @@
               <li data-filter="*" class="filter-active">Tous</li>
               <li data-filter=".filter-tapas">Tapas</li>
               <li data-filter=".filter-dishes">Plats</li>
-              <li data-filter=".filter-pizza">Pizzas</li>
+              <li data-filter=".filter-coca">Cocas</li>
               <li data-filter=".filter-desserts">Desserts</li>
             </ul>
           </div>
@@ -334,73 +334,73 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-pernil.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-pernil.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza au jambon</a><span></span>
+              <a href="#menu">Coca au jambon</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
           
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-formatges.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-formatges.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza fromage</a><span></span>
+              <a href="#menu">Coca fromage</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-provolone.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-provolone.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza au provolone</a><span></span>
+              <a href="#menu">Coca au provolone</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
           
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-xorico.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-xorico.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza chorizo</a><span></span>
+              <a href="#menu">Coca chorizo</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-pop.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-pop.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza au poulpe galicien</a><span></span>
+              <a href="#menu">Coca au poulpe galicien</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-sobrassada.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-sobrassada.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza sobrasada</a><span></span>
+              <a href="#menu">Coca sobrasada</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-tonyina.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-tonyina.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza au thon</a><span></span>
+              <a href="#menu">Coca au thon</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-vegetal.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-vegetal.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza végétale</a><span></span>
+              <a href="#menu">Coca végétale</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
@@ -531,7 +531,7 @@
             Fondée en 2012, la Taverna Arnui se trouve dans le village de Llavorsí, juste en dessous des Bordes d'Arnui qui donnent son nom au restaurant.
           </p>
           <p>
-            Notre cuisine classique propose des menus d'inspiration saisonnière avec des ingrédients de la plus haute qualité. Il y en a pour tous les goûts - des petites assiettes à partager à la pizza en passant par une expérience culinaire traditionnelle. Notre désir de traiter les clients comme des membres de la famille est resté le même, mais nos saveurs saisonnières changent constamment.
+            Notre cuisine classique propose des menus d'inspiration saisonnière avec des ingrédients de la plus haute qualité. Il y en a pour tous les goûts - des petites assiettes à partager à la coca en passant par une expérience culinaire traditionnelle. Notre désir de traiter les clients comme des membres de la famille est resté le même, mais nos saveurs saisonnières changent constamment.
           </p>
           <p>
             Venez prendre un déjeuner ou un dîner relaxant avec des amis ou en famille; à la Taverna Arnui, vous vous sentirez toujours chez vous.
