--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <li data-filter="*" class="filter-active">Tots</li>
               <li data-filter=".filter-tapas">Tapes</li>
               <li data-filter=".filter-dishes">Plats</li>
-              <li data-filter=".filter-pizza">Pizzas</li>
+              <li data-filter=".filter-coca">Cocas</li>
               <li data-filter=".filter-desserts">Postres</li>
             </ul>
           </div>
@@ -320,73 +320,73 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-pernil.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-pernil.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza de Pernil</a><span></span>
+              <a href="#menu">Coca de Pernil</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-formatges.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-formatges.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza de Formatges</a><span></span>
+              <a href="#menu">Coca de Formatges</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-provolone.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-provolone.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza de Provolone</a><span></span>
+              <a href="#menu">Coca de Provolone</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
           
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-xorico.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-xorico.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza de Xoriço</a><span></span>
+              <a href="#menu">Coca de Xoriço</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-pop.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-pop.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza de Pop a la Gallega</a><span></span>
+              <a href="#menu">Coca de Pop a la Gallega</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-sobrassada.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-sobrassada.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza de Sobrassada</a><span></span>
+              <a href="#menu">Coca de Sobrassada</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-tonyina.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-tonyina.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza de Tonyina</a><span></span>
+              <a href="#menu">Coca de Tonyina</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-pizza">
-            <img src="assets/img/menu/pizza-vegetal.png" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-coca">
+            <img src="assets/img/menu/coca-vegetal.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Pizza Vegetal</a><span></span>
+              <a href="#menu">Coca Vegetal</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
@@ -517,7 +517,7 @@
             Fundada el 2012, la Taverna Arnui es troba al poble de Llavorsí, just sota el Bordes d'Arnui que dóna nom al restaurant.
           </p>
           <p>
-            La nostra cuina clàssica presenta menús d'inspiració estacional amb els ingredients de més alta qualitat. Hi ha alguna cosa per a tothom: des de petits plats compartibles fins a pizza fins a una experiència de menjador tradicional. El nostre desig de tractar als convidats com si fossin familiars s'ha mantingut igual, però els nostres sabors estacionals canvien constantment.
+            La nostra cuina clàssica presenta menús d'inspiració estacional amb els ingredients de més alta qualitat. Hi ha alguna cosa per a tothom: des de petits plats compartibles fins a coca fins a una experiència de menjador tradicional. El nostre desig de tractar als convidats com si fossin familiars s'ha mantingut igual, però els nostres sabors estacionals canvien constantment.
           </p>
           <p>            
             Vine a dinar o sopar amb amics o família; a la Taverna Arnui sempre et sentiràs a casa.
