--- a/es.html
+++ b/es.html
@@ -249,7 +249,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-dishes">
+          <div class="col-lg-6 menu-item filter-coca">
             <img src="assets/img/menu/escalivada.png" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#menu">Coca d'Escalivada</a><span></span>
@@ -340,24 +340,6 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-coca">
-            <img src="assets/img/menu/coca-provolone.png" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#menu">Coca provolone</a><span></span>
-            </div>
-            <div class="menu-ingredients">
-            </div>
-          </div>
-          
-          <div class="col-lg-6 menu-item filter-coca">
-            <img src="assets/img/menu/coca-xorico.png" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#menu">Coca chorizo</a><span></span>
-            </div>
-            <div class="menu-ingredients">
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filter-coca">
             <img src="assets/img/menu/coca-pop.png" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#menu">Coca pulpo gallega</a><span></span>
@@ -385,9 +367,9 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-coca">
-            <img src="assets/img/menu/coca-vegetal.png" class="menu-img" alt="">
+            <img src="assets/img/menu/coca-espinacas.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Coca vegetal</a><span></span>
+              <a href="#menu">Coca espinacas</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
