--- a/fr.html
+++ b/fr.html
@@ -262,7 +262,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-dishes">
+          <div class="col-lg-6 menu-item filter-coca">
             <img src="assets/img/menu/escalivada.png" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#menu">Coca d'Escalivada</a><span></span>
@@ -353,24 +353,6 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-coca">
-            <img src="assets/img/menu/coca-provolone.png" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#menu">Coca au provolone</a><span></span>
-            </div>
-            <div class="menu-ingredients">
-            </div>
-          </div>
-          
-          <div class="col-lg-6 menu-item filter-coca">
-            <img src="assets/img/menu/coca-xorico.png" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#menu">Coca chorizo</a><span></span>
-            </div>
-            <div class="menu-ingredients">
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filter-coca">
             <img src="assets/img/menu/coca-pop.png" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#menu">Coca au poulpe galicien</a><span></span>
@@ -398,9 +380,9 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-coca">
-            <img src="assets/img/menu/coca-vegetal.png" class="menu-img" alt="">
+            <img src="assets/img/menu/coca-espinacas.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Coca végétale</a><span></span>
+              <a href="#menu">Coca épinard</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
