--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-dishes">
+          <div class="col-lg-6 menu-item filter-coca">
             <img src="assets/img/menu/escalivada.png" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#menu">Coca d'Escalivada</a><span></span>
@@ -339,24 +339,6 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-coca">
-            <img src="assets/img/menu/coca-provolone.png" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#menu">Coca de Provolone</a><span></span>
-            </div>
-            <div class="menu-ingredients">
-            </div>
-          </div>
-          
-          <div class="col-lg-6 menu-item filter-coca">
-            <img src="assets/img/menu/coca-xorico.png" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#menu">Coca de Xoriço</a><span></span>
-            </div>
-            <div class="menu-ingredients">
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filter-coca">
             <img src="assets/img/menu/coca-pop.png" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#menu">Coca de Pop a la Gallega</a><span></span>
@@ -384,9 +366,9 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-coca">
-            <img src="assets/img/menu/coca-vegetal.png" class="menu-img" alt="">
+            <img src="assets/img/menu/coca-espinacas.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Coca Vegetal</a><span></span>
+              <a href="#menu">Coca espinacs</a><span></span>
             </div>
             <div class="menu-ingredients">
             </div>
