--- a/en.html
+++ b/en.html
@@ -267,7 +267,7 @@
           <div class="col-lg-6 menu-item filter-coca">
             <img src="assets/img/menu/escalivada.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Coca d'Escalivada</a><span></span>
+              <a href="#menu">Escalivada on Catalan flatbread</a><span></span>
             </div>
             <div class="menu-ingredients">
               Roasted vegetables on Catalan flatbread
