--- a/en.html
+++ b/en.html
@@ -367,7 +367,7 @@
           <div class="col-lg-6 menu-item filter-coca">
             <img src="assets/img/menu/coca-pop.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#menu">Galician-style Octopus Coca</a><span></span>
+              <a href="#menu">Galician-style Octopus on Catalan flatbread</a><span></span>
             </div>
             <div class="menu-ingredients">
               Octopus, olive oil, and paprika
