--- a/es.html
+++ b/es.html
@@ -80,7 +80,7 @@
           <h2>¡Bienvenidos a Llavorsí!</h2>
 
           <div class="btns">
-            <a href="#menu" class="btn-menu animated fadeInUp scrollto">Neustra Menú</a>
+            <a href="#menu" class="btn-menu animated fadeInUp scrollto">Nuestra Menú</a>
             <a href="#contact" class="btn-book animated fadeInUp scrollto">Reserva una Mesa</a>
           </div>
         </div>
@@ -97,7 +97,7 @@
 
         <div class="section-title">
           <h2>Menú</h2>
-          <p>Neustra Menú</p>
+          <p>Nuestra Menú</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
