rm hummus es.html

--- a/es.html
+++ b/es.html
@@ -114,6 +114,7 @@
 
         <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
 
+          <!-- Hummus 
           <div class="col-lg-6 menu-item filter-tapas">
             <img src="assets/img/menu/hummus.png" class="menu-img" alt="">
             <div class="menu-content">
@@ -122,7 +123,8 @@
             <div class="menu-ingredients">
             </div>
           </div>
-
+          -->
+          
           <div class="col-lg-6 menu-item filter-tapas">
             <img src="assets/img/menu/patates.png" class="menu-img" alt="">
             <div class="menu-content">
