rm hummus en.html

--- a/en.html
+++ b/en.html
@@ -114,7 +114,8 @@
 
         <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-6 menu-item filter-tapas">
+        <!-- Hummus
+	  <div class="col-lg-6 menu-item filter-tapas">
             <img src="assets/img/menu/hummus.png" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#menu">Hummus</a><span></span>
@@ -123,7 +124,8 @@
               Cooked, mashed chickpeas blended with tahini, lemon juice, and garlic
             </div>
           </div>
-
+ 	-->
+		
           <div class="col-lg-6 menu-item filter-tapas">
             <img src="assets/img/menu/patates.png" class="menu-img" alt="">
             <div class="menu-content">
